# TinyServe/pyproject.toml
[build-system]
# We MUST list pybind11 here so the isolated build environment gets it
requires = ["setuptools", "wheel", "torch"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyserve"
version = "0.1.0"
description = "High-throughput LLM serving with PagedAttention"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
]